platform/src/objects/Dish_Network_Receiver__c.object
<CustomObject>
    <fields>
        <fullName>BE__c</fullName>
        <label>BE #</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSG__c</fullName>
        <label>CSG #</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Vnet_Site__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connected_On__c</fullName>
        <label>Connected On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model #</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Vnet_Site__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receiver_ID__c</fullName>
        <label>Receiver ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Card_ID__c</fullName>
        <label>Smart Card ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Vnet_Site__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <formula>Vnet_Site__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vnet_Site_ID__c</fullName>
        <formula>Vnet_Site__r.Vnet_Site_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vnet Site ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vnet_Site__c</fullName>
        <label>Vnet Site</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dish Network Receivers</relationshipLabel>
        <relationshipName>Dish_Network_Receivers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dish Network Receiver</label>
    <nameField>
        <displayFormat>DNR-{0000000}</displayFormat>
        <label>Dish Network Recievers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dish Network Receivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>